[package]
name = "rusttime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1.0"
lazy_static = "1.4.0"
chrono = "0.4"
rand = "0.8.4"

[lib]
crate-type = ["staticlib"]
