;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Institut National de Recherche en Informatique et     *
;*     en Automatique.                                                    *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(executables
 (names   make_opcodes cvt_emit)
 (modules make_opcodes cvt_emit))

(ocamllex
 (modules make_opcodes)
 (mode    fallback))

(ocamllex
 (modules cvt_emit)
 (mode    fallback))
