;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(library
 (name unix)
 (wrapped false)
 (modes byte)
 (flags (:standard -nostdlib -nolabels))
 (c_flags (-I %{project_root}/runtime))
 (libraries stdlib)
 (c_names
   accept_unix access addrofstr alarm bind_unix channels_unix chdir chmod chown
   chroot close_unix fsync closedir connect_unix cst2constr cstringv dup_unix
   dup2 envir_unix errmsg_unix execv execve execvp exit fchmod fchown fcntl
   fork ftruncate getaddrinfo getcwd getegid geteuid getgid getgr getgroups
   gethost gethostname getlogin getnameinfo getpeername_unix getpid_unix
   getppid getproto getpw gettimeofday_unix getserv getsockname_unix getuid
   gmtime initgroups isatty_unix itimer kill link_unix listen_unix lockf_unix
   lseek_unix mkdir mkfifo mmap_unix mmap_ba nice open_unix opendir pipe_unix
   putenv read_unix readdir readlink_unix realpath_unix rename_unix rewinddir
   rmdir select_unix sendrecv_unix setgid setgroups setsid setuid shutdown_unix
   signals sleep_unix socket_unix socketaddr socketpair_unix sockopt_unix
   stat_unix strofaddr symlink_unix termios time times_unix truncate_unix umask
   unixsupport_unix unlink utimes_unix wait write_unix))
